# TTT-app

./: .gitignore  CMakeLists.txt  README.md
src/backend/: game.py
src/controller/: board.cpp  board.hpp  main.cpp  rules.cpp  rules.hpp  user-input.cpp  user-input.hpp
